inc/assets/less/tc_custom_responsive.less
/* ... */
@media (max-width: 979px) and (min-width: 768px)  {
  .sticky-enabled .navbar-wrapper {
    float: none;
  }
}


@media (max-width: 767px) {
  body {
    padding-left: 0px;
    padding-right: 0px;
  }
  #main-wrapper {
    padding-left: 10px;
    padding-right: 10px;
  }
  h1 { font-size: @honeFontSize * 0.8; line-height: @honeFontSize * 0.8 }
  h2 { font-size: @htwoFontSize * 0.8; line-height: @htwoFontSize * 0.8}
  h3 { font-size: @hthreeFontSize * 0.8; line-height: @hthreeFontSize * 0.8}
  h4 { font-size: @hfourFontSize * 0.8; line-height: @hfourFontSize * 0.8}
  h5 { font-size: @hfiveFontSize * 0.8; line-height: @hfiveFontSize * 0.8 }
  h6 { font-size: @hsixFontSize * 0.8; line-height: @hsixFontSize * 0.8 }

  .span6.article-container .round-div,
  .span9.article-container .round-div,
  .span12.article-container .round-div {
    width: 100px;
    height: 100px;
    top: -46px;
    left: -78px;
  }

  .span6.article-container .thumb-wrapper img,
  .span9.article-container .thumb-wrapper img,
  .span12.article-container .thumb-wrapper img {
    max-width: 190px;
  }

  .thumb-wrapper {
    height: 200px;
    max-width: 131px;
  }
  .tc-content .thumb-wrapper img {
    right: 0px;
  }

  /* hide left sidebar */
  #left.widget-area {
    /* display:none; */
  }
  /*hide the border and before effect for right sidebar*/
  #right.widget-area {
    border-left:0px;
  }
  #right.widget-area:before{
    border-left:0px;
  }
  .navbar-inner {
    margin: -20px;
  }
  .carousel {
    /* margin-left: -20px;
    margin-right: -20px; */

  }
 .carousel .item {
    line-height: 308px;
    overflow: hidden;
    min-height: 308px;
  }

  .item .carousel-caption h1 {
    font-size: 22px;
  }
  .carousel-caption .btn {
    font-size: 16px;
  }
  .marketing .span4 + .span4 {
    margin-top: 40px;
  }
  .featurette-heading {
    font-size: 30px;
  }
  .featurette .lead {
    font-size: 18px;
    line-height: 1.5;
  }
  #left .round-div {
    left: -66px;
  }
  /*force comment layout to be not responsive */
  .row-fluid .comment-avatar.span2 {
    width: 14.893617021%;
    float: @floatDirection;
    margin-right: 2.762430939%;
  }
  footer#footer {
    text-align: center;
  }
  /* SINCE V3.2.0 */
  .span6 .thumb-position-top .round-div {
    width: 125px;
    height: 125px;
    top: -59px;
    left: -63px;
  }
  .span6 .thumb-position-top .thumb-wrapper {
    max-width: none;
  }
  .site-title {
    font-size: 0.8em;
  }
  .sticky-enabled .navbar .btn-navbar {
    margin: 9px 0px;
  }
  /* POST GRID */
  .featurette-divider.post-list-grid{
      display: none;
  }
  .tc-post-list-grid .featurette-divider.__after_article{
      display: block;
  }
  .tc-post-list-grid .entry-summary {
    padding: 5%;
  }
  .expanded .tc-grid-post figcaption {
    max-width: none;
    margin-left: 0;
  }
  [class*=grid-cols-] .tc-grid-post figure {
    height: 225px;
    max-height: 225px;
    line-height: 225px;
  }
  /* ICONS */
  .tc-post-list-grid article .tc-grid-icon:before, .tc-post-list-grid article.format-quote .tc-grid-icon:before, .tc-post-list-grid article.format-status .tc-grid-icon:before, {
    font-size: 60px;
  }
}

@media (max-width: 480px) {
  .span6.article-container .thumb-wrapper img, .span9.article-container .thumb-wrapper img, .span12.article-container .thumb-wrapper img {
    max-width: 222px;
    right: 14px;
    top: -9px;
  }
  .span6.article-container .thumb-wrapper, .span9.article-container .thumb-wrapper, .span12.article-container .thumb-wrapper  {
    height: 180px;
    left: 0px;
  }

  .tc-content .thumb-wrapper img {
    right: -4px;
  }
  .thumb-wrapper {
    max-width: 200px;
  }
  .span6.article-container .round-div, .span9.article-container .round-div, .span12.article-container .round-div {
    width: 125px;
    height: 125px;
    top: -68px;
    left: -57px;
  }
  .navbar-inner .social-block {
    padding:5px 0px 0px 0px;
  }
  .social-block a {
  padding-right: 10px;
  }
  .carousel .item {
    line-height: 190px;
    overflow: hidden;
    min-height: 190px;
  }

  .carousel-caption {
    padding: 2%;
    margin-left: 17%;
    position:relative;
    max-height: 130px;
    overflow: hidden;
  }
  .item .carousel-caption h1 {
    font-size: 20px;
  }
  .carousel-caption .lead,
  .carousel-caption .btn {
    font-size: 13px;
    line-height: 13px;
    max-height: 50px;
    overflow: hidden;
  }
  .carousel-caption .btn {
    padding:7px;
  }
 .tc-carousel-control {
    font-size: 90px;
    height: 32px;
  }
  .social-block a {
    font-size: 1em;
  }
  .sticky-enabled .brand .site-title {
    font-size: 0.5em;
    display: -webkit-box;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    overflow: hidden;
  }
  .sticky-enabled .brand h1, .sticky-enabled .brand a {
    margin: 10px 0px 0px;
  }
  .navbar-inner .social-block a {
    padding-right: 6px;
  }
  /* GRID */
  .tc-g-cont {
    max-height: 80px;
    overflow: hidden;
  }
}
/* Side Nav */
@media (max-width: 400px){
  nav#tc-sn {
    width: 400px;
    max-width: 100%;
  }
  /* when open, give to the menu a greater z-index
   */
  .tc-sn-visible:not(.sn-close) #tc-sn {
    z-index: 9999;
  }
  .tc-sn-visible {
    overflow: hidden;
  }
  /* Hack*/
  /* prevent pan in mobiles max-width: 400px: should we apply this for all tc-is-mobile losing the page scroll down ?? */
  .tc-sn-visible #tc-page-wrap { position: absolute; width: 100%;}
  .tc-sn-visible.sticky-enabled.admin-bar #tc-page-wrap { top: 0; }
  /*end prevent overflows in mobiles */
}
@media (max-width: 320px) {
  .carousel .item {
    line-height: 140px;
    overflow: hidden;
    min-height: 140px;
  }
  .carousel-caption {
    padding: 2%;
  }
  .item .carousel-caption h1 {
    font-size: 16px;
  }
  .carousel-caption .btn {
    padding:5px;
  }
  .social-block a {
     font-size:0.9em
  }
  .navbar .navbar-inner .social-block {
      margin: 10px 0 0;
      font-size: 0.95em;
  }
}

